PreservedMarks verification code fails

XMLWordPrintable

    • gc
    • b126

      We get assertion failures like:
      # Internal Error (src/share/vm/gc/shared/preservedMarks.inline.hpp:68), pid=25548, tid=25556
      # assert(total_size == total_size_before) failed: total_size = 0 before = 9512

      because the code to update total_size updates the total_size_addr pointer and not the value.

            Assignee:
            Stefan Karlsson
            Reporter:
            Stefan Karlsson
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: