8159237: PreservedMarks verification code fails

Reviewed-by: lmesnik, jwilhelm